--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@ h1 {
 .card {
     padding: 10px 25px 10px 25px;
     border-radius: 10px;
-    background: #c2f2f2;
+    background: #0478c5;
     width: 85vw;
-    color: #0478c5;
+    color: #c2f2f2;
     display: inline-block;
     box-shadow: 2px 2px 1px 0px #330835;
 }
